Finished the graphical ACG chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass{report}
 
 %% \usepackage{sdrt}
+\usepackage{tikz}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{xcolor}
@@ -8,7 +9,10 @@
 \usepackage{gb4e}
 \usepackage{bussproofs}
 \usepackage{hyperref}
+\usepackage{subcaption}
+\usepackage{cancel}
 \usepackage[yyyymmdd,hhmmss]{datetime}
+
 
 %% Linear implication from Alessio Guglielmi
 %% https://groups.google.com/forum/?fromgroups=#!topic/comp.text.tex/0B4C3F_BsVI
